@@ -1,8 +1,6 @@
 package me.wobbychip.smptweaks.custom.custompotions.custom;
 
-import java.util.Arrays;
-import java.util.Random;
-
+import me.wobbychip.smptweaks.custom.custompotions.potions.CustomPotion;
 import org.bukkit.Color;
 import org.bukkit.Location;
 import org.bukkit.Material;
@@ -14,13 +12,14 @@ import org.bukkit.event.entity.AreaEffectCloudApplyEvent;
 import org.bukkit.event.entity.ProjectileHitEvent;
 import org.bukkit.event.player.PlayerItemConsumeEvent;
 
-import me.wobbychip.smptweaks.custom.custompotions.potions.CustomPotion;
+import java.util.List;
+import java.util.Random;
 
 public class CopperPotion extends CustomPotion {
 	public CopperPotion() {
 		super("amethyst", Material.COPPER_INGOT, "copper", Color.fromRGB(231, 124, 86));
 		this.setDisplayName("§r§fPotion of Copper");
-		this.setLore(Arrays.asList("§9Use when thunder"));
+		this.setLore(List.of("§9Use when thunder"));
 		this.setTippedArrow(true, "§r§fArrow of Copper");
 		this.setAllowVillagerTrades(true);
 	}
